<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCSC Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_text_login">Login</string>
    <string name="field_text_username">username</string>
    <string name="field_text_password">password</string>
    <string name="auto_login">Auto</string>
    <string name="create_account"><u>Create an Account</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_pass_instruct_1">Username:</string>
    <string name="forgot_pass_instruct_2">Email:</string>
    <string name="button_submit">Submit</string>
    <string name="pass_recovery_title">Password Recovery</string>
    <string name="button_go_to_map">Go To Map</string>
    <string name="button_add_to_schedule">Add To Schedule</string>
    <string name="button_add_classroom">Add a Classroom</string>

    <!-- Action Bar Buttons -->
    <string name="action_search">Search</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check For Updates</string>
    <string name="button_callback_login">onLoginButtonPressed</string>

    <!-- Navigational Drawer Items -->
    <string name="drawer_open">Slider Menu Open</string>
    <string name="drawer_close">Slider Menu Close</string>

    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Buildings</item>
        <item>Classrooms</item>
        <item>My Schedule</item>
        <item>Log out</item>
    </string-array>

    <!-- Navigational Drawer Item Icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/building_icon</item>
        <item>@drawable/classroom_icon</item>
        <item>@drawable/schedule_icon</item>
        <item>@drawable/logout_icon</item>
    </array>

    <!-- Content Description -->
    <string name="list_item_icon">Item Icon</string>
    <string name="text_login_error">Please enter your username and password.</string>
    <string name="text_okay">Okay</string>
    <string name="title_activity_tag_building">TagBuildingActivity</string>
    <string name="button_text_enter">Enter</string>
    <string name="text_enter_classroom_name">Enter classroom name:</string>
    <string name="text_enter_building_name">Enter building name:</string>
    <string name="button_callback_enter">onEnterButtonPressed</string>
    <string name="text_url_base">http://10.0.1.3:8000/ucscMapServer/default/</string>
    <string name="text_url_login">http://10.0.1.3:8000/ucscMapServer/default/login/?secret=becausesecret</string>
    <string name="text_url_createLogin">http://10.0.1.3:8000/ucscMapServer/default/createLogin/?secret=becausesecret</string>
    <string name="text_url_getBuildings">http://10.0.1.3:8000/ucscMapServer/default/getBuildings/?secret=becausesecret</string>

</resources>
