<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00378A"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ucscmap.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/editTextMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:maxLines="1"
        android:text="@string/field_text_username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextMain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextMain1"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/buttonMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextMain1"
        android:layout_alignRight="@+id/editTextMain2"
        android:layout_below="@+id/editTextMain2"
        android:onClick="@string/button_callback_login"
        android:text="@string/button_text_login" />

    <TextView
        android:id="@+id/textViewMain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextMain2"
        android:layout_alignBottom="@+id/editTextMain2"
        android:layout_alignLeft="@+id/editTextMain1"
        android:layout_marginLeft="14dp"
        android:text="@string/field_text_password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
