<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00378A"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ucscmap.TagBuildingActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/editTextTagB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewTagB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextTagB1"
        android:layout_alignLeft="@+id/editTextTagB1"
        android:layout_alignRight="@+id/editTextTagB1"
        android:layout_marginBottom="66dp"
        android:text="@string/text_enter_building_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonTagB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextTagB1"
        android:layout_alignRight="@+id/editTextTagB1"
        android:layout_below="@+id/editTextTagB1"
        android:onClick="@string/button_callback_enter"
        android:text="@string/button_text_enter" />

</RelativeLayout>
